# freebsd-doc-scripts

./: .gitignore  LICENSE  README.md  fixes.py  generate-man-problem-lists.sh  lint.py  man_file.py  process_man.py  pyproject.toml
freebsd_doc_scripts/: fixes.py  lint.py  man_file.py  man_lines.py  mandoc_lint_output.py  process_man.py
scripts/: generate-man-problem-lists.sh
